[metadata]
name = ixian
author = Peter Krenesky
author-email = kreneskyp@gmail.com
summary = Task tool with make-like features.
description-file = README.md
home-page = https://github.com/kreneskyp/ixian
requires-python = >=3.6
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[coverage:run]
branch = True
source = ixian

[coverage:report]
exclude_lines =
    pragma: no cover
    pragma: nocover
show_missing = 1
fail_under = 100

[files]
packages = ixian

[pbr]
skip_authors = true
skip_changelog = true
